# appflowy-mcp-toolkit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COORDINATION.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/appflowy-test/: README.md  compose.override.yml  env.test.example
docs/: appflowy-coverage-matrix.md  browser-ui-acceptance.md  collab-driver-plan.md  deferred-field-decisions.md  development.md  execution-roadmap.md  multifield-coverage-plan.md  release-checklist.md  rest-vs-collab.md  safety.md  self-hosted-test-plan.md  typed-field-coverage.md
scripts/: _ordering_builder.js  appflowy_test_env_down.sh  appflowy_test_env_up.sh  appflowy_test_seed.py  test_all_local.sh  test_ordering_integration.js
src/appflowy_mcp_toolkit/: __init__.py  blob_diff.py  client.py  config.py  errors.py  formatting.py  markdown.py  rate_limit.py  typed_fields.py  workflows.py
src/appflowy_mcp_toolkit/cli/: main.py
src/appflowy_mcp_toolkit/client_parts/: __init__.py  base.py  databases.py  diagnostics.py  files.py  helpers.py  pages.py  publishing.py  tasks_rows.py  templates.py  workspaces.py
src/appflowy_mcp_toolkit/collab/: collab_delete.py  package-lock.json  package.json  yjs_helper.js
src/appflowy_mcp_toolkit/mcp/: server.py
src/appflowy_mcp_toolkit/mcp/tools/: __init__.py  core.py  databases.py  diagnostics.py  pages.py  publishing.py  spaces_files.py  tasks_rows.py  templates.py
src/appflowy_mcp_toolkit/services/: __init__.py  databases.py  folders.py  rows.py  workspaces.py
tests/: conftest.py  helpers.py
tests/browser/: conftest.py  test_appflowy_web_board_acceptance.py  test_appflowy_web_page_features.py  test_appflowy_web_smoke.py  test_appflowy_web_typed_fields.py
tests/live/: test_task_lifecycle.py
tests/selfhosted/: README.md  conftest.py  test_selfhosted_task_lifecycle.py
tests/unit/: test_append_markdown.py  test_blob_diff.py  test_cli.py  test_client.py  test_collab_delete.py  test_collab_diagnostic_safety.py  test_compact_truncation.py  test_duplicate_published_page.py  test_local_upload_hardening.py  test_mcp_annotations_errors.py  test_mcp_server.py  test_ordering.py  test_ordering_integration.py  test_publish_page.py  test_publishing_readonly.py  test_rate_limiting.py  test_templates.py  test_typed_fields.py
