[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appflowy-mcp-toolkit"
version = "0.1.0"
description = "Local-first AppFlowy MCP toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Cosmin Dobrescu"}]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=8.0", "ruff>=0.8.0", "mypy>=1.10", "pytest-asyncio>=0.24"]

[project.scripts]
appflowy-toolkit = "appflowy_mcp_toolkit.cli.main:main"
appflowy-mcp-server = "appflowy_mcp_toolkit.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/appflowy_mcp_toolkit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
